--- a/transactions/templates/transactions/_transaction_review.html
+++ b/transactions/templates/transactions/_transaction_review.html
@@ -22,75 +22,50 @@
             <div>We now confirm details of the above transaction as follows:</div>
             <!-- Transaction Details -->
             <div id="review-summary_box">
-                <div class="row border border-dark">
-                    <div class="col">
-                        We sell:<br>
-                        Rate:<br>
-                        <span id="review-origin_currency"></span> Equivalent:<br>
-                        Bank Charges:<br>
-                        Total Amount Due:<br>
-                        Value Date:<br>
-                    </div>
-                    <div class="col text-center">
-                        <span id="review-settlement_currency"></span><br>
-                        <br>
-                        <span id="review-origin_currency2"></span><br>
-                        TTD<br>
-                        TTD<br>
-                    </div>
-                    <div class="col text-right">
-                        <span id="review-settlement_amount"></span><br>
-                        <span id="review-settlement_currency_rate"></span><br>
-                        <span id="review-origin_amount"></span><br>
-                        <span id="review-bank_charges"></span><br>
-                        <span id="review-total_amount"></span><br>
-                        <span id="review-value_date"></span><br>
-                    </div>
-                </div>
             </div>
 
-            <div>
+            <div id="review-bank_details_box">
                 <p><strong>Our settlement of the stated value date is subject to receipt of the TTD funds on <u><span id="review-value_date2"></span></u>.</strong></p>
                 <p>Upon receipt of <span id="review-origin_currency3"></span> funds, Development Finance Limited will transfer <span id="review-y"></span> <span id="review-settlement_amount2"></span> to:</p>
-            </div>
-            <div class="row mb-3">
-                <div class="col-3">
-                    Intermediary Bank:<br>
-                    <br>
-                    <strong>SWIFT:</strong><br>
+                <div class="row mb-3">
+                    <div class="col-3">
+                        Intermediary Bank:<br>
+                        <br>
+                        <strong>SWIFT:</strong><br>
+                    </div>
+                    <div class="col-9">
+                        <strong><span id="review-intermediary_bank_name"></span></strong><br>
+                        <span id="review-intermediary_bank_address"></span> <span id="review-intermediary_bank_address2"></span>, 
+                        <span id="review-intermediary_bank_city"></span>, <span id="review-intermediary_bank_state"></span> <span id="review-intermediary_bank_zip"></span><br>
+                        <strong><span id="review-intermediary_swift_code"></strong><br>
+                    </div>
                 </div>
-                <div class="col-9">
-                    <strong><span id="review-intermediary_bank_name"></span></strong><br>
-                    <span id="review-intermediary_bank_address"></span> <span id="review-intermediary_bank_address2"></span>, 
-                    <span id="review-intermediary_bank_city"></span>, <span id="review-intermediary_bank_state"></span> <span id="review-intermediary_bank_zip"></span><br>
-                    <strong><span id="review-intermediary_swift_code"></strong><br>
+                <div class="row mb-3">
+                    <div class="col-3">
+                        Beneficiary Bank:<br>
+                        <br>
+                        <strong>SWIFT:</strong><br>
+                    </div>
+                    <div class="col-9">
+                        <strong><span id="review-bank_name"></span></strong><br>
+                        <span id="review-bank_address"></span> <span id="review-bank_address2"></span>, 
+                        <span id="review-bank_city"></span>, <span id="review-bank_state"></span> <span id="review-bank_zip"></span><br>
+                        <strong><span id="review-swift_code"></strong>
+                    </div>
                 </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-3">
-                    Beneficiary Bank:<br>
-                    <br>
-                    <strong>SWIFT:</strong><br>
-                </div>
-                <div class="col-9">
-                    <strong><span id="review-bank_name"></span></strong><br>
-                    <span id="review-bank_address"></span> <span id="review-bank_address2"></span>, 
-                    <span id="review-bank_city"></span>, <span id="review-bank_state"></span> <span id="review-bank_zip"></span><br>
-                    <strong><span id="review-swift_code"></strong>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-3">
-                    Beneficiary Customer:<br>
-                    <br>
-                    <br>
-                    <strong>ACC #:</strong><br>
-                </div>
-                <div class="col-9">
-                    <strong><span id="review-recipient_name"></span></strong><br>
-                    <span id="review-recipient_address"></span> <span id="review-recipient_address2"></span>, <br>
-                    <span id="review-recipient_city"></span>, <span id="review-recipient_state"></span> <span id="review-recipient_zip"></span><br>
-                    <strong><span id="review-account_number"></strong><br>
+                <div class="row mb-3">
+                    <div class="col-3">
+                        Beneficiary Customer:<br>
+                        <br>
+                        <br>
+                        <strong>ACC #:</strong><br>
+                    </div>
+                    <div class="col-9">
+                        <strong><span id="review-recipient_name"></span></strong><br>
+                        <span id="review-recipient_address"></span> <span id="review-recipient_address2"></span>, <br>
+                        <span id="review-recipient_city"></span>, <span id="review-recipient_state"></span> <span id="review-recipient_zip"></span><br>
+                        <strong><span id="review-account_number"></strong><br>
+                    </div>
                 </div>
             </div>
             <div class="row mb-3">
