--- a/transactions/templates/transactions/transactions_form.html
+++ b/transactions/templates/transactions/transactions_form.html
@@ -136,6 +136,7 @@
                                             <input type="text" value="{{ formdata.fd_certificate_number }}" class="form-control" name="fd_certificate_number" id="fd_certificate_number" />
                                         </div>
                                     </div>
+                                    <!--
                                     <div class="row mb-2">
                                         <div class="col-8 g-1">
                                             <label for="in_payment">Inbound Payment Instructions </label>
@@ -157,6 +158,7 @@
                                             <input type="text" value="{{ formdata.fd_certificate_number }}" class="form-control" name="fd_certificate_number" id="fd_certificate_number" />
                                         </div>
                                     </div>
+                                    -->
                                     <div class="row mb-2">
                                         <div class="col">
                                             <label for="payment_details">Payment Details </label>
@@ -165,7 +167,10 @@
                                         </div>
                                     </div>
                                 </fieldset>
+                                <!-- 
                                 <button type="button" class="btn btn-lg btn-primary py-1 px-3 mt-1" data-toggle="modal" data-target="#reviewModal" onclick="dealReview();">Review</button>
+                                -->
+                                <button type="submit" class="btn btn-primary">Submit</button>
 
 
                                 <!-- Confirmation Modal -->
