--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -45,7 +45,8 @@
                                 <tbody>
                                     {% for currency in currency_data %}
                                     <tr>
-                                        <td><a href="{% url "core:register" currency.currency|lower %}">{{ currency.currency }}</a></td>
+                                        {% comment %} <td><a href="{% url "core:register" currency.currency|lower %}">{{ currency.currency }}</a></td> {% endcomment %}
+                                        <td>{{ currency.currency }}</td>
                                         <td>{{ currency.symbol }}{{ currency.opening|floatformat:2|intcomma }}</td>
                                         <td>{{ currency.symbol }}{{ currency.today_purchase|floatformat:2|intcomma }}</td>
                                         <td>{{ currency.symbol }}{{ currency.today_sale|floatformat:2|intcomma }}</td>
