made logo a link to home

--- a/core/templates/layout/sidebar.html
+++ b/core/templates/layout/sidebar.html
@@ -4,7 +4,9 @@
         <div class="sidebar-header">
             <div class="brand d-flex">
                 <div class="mr-2">
+                    <a href="{% url "core:home" %}">
                     <img src="{% static "images/logo/favicon-32x32.png" %}" alt="Development Finance Limited">
+                    </a>
                 </div>DFL Foreign Exchange
             </div>
         </div>
