also made the words a link, I forgot

--- a/core/templates/layout/sidebar.html
+++ b/core/templates/layout/sidebar.html
@@ -7,7 +7,8 @@
                     <a href="{% url "core:home" %}">
                     <img src="{% static "images/logo/favicon-32x32.png" %}" alt="Development Finance Limited">
                     </a>
-                </div>DFL Foreign Exchange
+                </div>
+                    <a href="{% url "core:home" %}">DFL Foreign Exchange</a>
             </div>
         </div>
         <nav class="menu">
