--- a/core/templates/layout/sidebar.html
+++ b/core/templates/layout/sidebar.html
@@ -8,7 +8,7 @@
                     <img src="{% static "images/logo/favicon-32x32.png" %}" alt="Development Finance Limited">
                     </a>
                 </div>
-                    <a href="{% url "core:home" %}">DFL Foreign Exchange</a>
+                    <a href="{% url "core:home" %}" class="text-decoration-none">DFL Foreign Exchange</a>
             </div>
         </div>
         <nav class="menu">
