--- a/core/templates/core/blotter_table.html
+++ b/core/templates/core/blotter_table.html
@@ -17,21 +17,29 @@
                                 <table class="table table-striped smaller-text" id="blotter-table">
                                     <thead>
                                         <tr>
-                                            <th>Deal #</th>
                                             <th>Opening Balance</th>
+                                            <th>Deal #</th>
+                                            <th>Contract Date</th>
+                                            <th>Entry Time</th>
+                                            <th>Client</th>
+                                            <th>Exchange Rate</th>
                                             <th>Purchases</th>
-                                            <th>Sals</th>
+                                            <th>Sales</th>
                                             <th>Closing Balance</th>
                                             <th>Future Dated Purchases</th>
-                                            <th>Future Dated Sals</th>
+                                            <th>Future Dated Sales</th>
                                             <th>Adjusted Closing Balance</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         {% for detail in details %}
                                         <tr>
-                                            <td>{{ detail.id }}</td>
                                             <td>{{ detail.opening|floatformat:2|intcomma }}</td>
+                                            <td>{{ detail.id }}</td>
+                                            <td>{{ detail.contract_date }}</td>
+                                            <td>{{ detail.entry_time }}</td>
+                                            <td>{{ detail.client }}</td>
+                                            <td>{{ detail.rate }}</td>
                                             <td>{{ detail.purchase|floatformat:2|intcomma }}</td>
                                             <td>{{ detail.sale|floatformat:2|intcomma }}</td>
                                             <td>{{ detail.closing|floatformat:2|intcomma }}</td>
@@ -66,7 +74,7 @@
                 buttons: ['excel', 'pdfHtml5']
             }
         },
-        order: [[0, 'desc']]
+        order: [[1, 'asc']]
     });
 
 </script>
