set the theme to stay seagreen by default

--- a/core/templates/layout/base.html
+++ b/core/templates/layout/base.html
@@ -25,7 +25,7 @@
             }
             else
             {
-                document.write('<link rel="stylesheet" id="theme-style" href="/static/css/app.css">');
+                document.write('<link rel="stylesheet" id="theme-style" href="/static/css/app-seagreen.css">');
             }
         </script>
     </head>
