--- a/core/templates/core/register_table.html
+++ b/core/templates/core/register_table.html
@@ -5,22 +5,23 @@
 
 {% block content %}
     <section class="section">
+        <div class="title-block">
+            <div class="select-currency mr-auto">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select Currency: {{ selected_currency }}</button>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{% url "core:register_all" %}">All</a>
+                        {% for currency in currencies %}
+                        <a class="dropdown-item" href="{% url "core:register" currency.currency_code|lower %}">{{ currency.currency_code }}</a>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col">
                 <div class="card stats" data-exclude="xs">
                     <div class="card-block">
-                        <div class="title-block">
-                            <div class="select-currency mr-auto">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select Currency: {{ selected_currency }}</button>
-                                    <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="{% url "core:register_all" %}">All</a>
-                                        {% for currency in currencies %}
-                                        <a class="dropdown-item" href="{% url "core:register" currency.currency_code|lower %}">{{ currency.currency_code }}</a>
-                                        {% endfor %}
-                                    </div>
-                                </div>
-                        </div>
                         <div class="row row-sm">
                             {% if transactions %}
                             <div class="table-responsive">
@@ -97,7 +98,8 @@
         order: [[0, 'desc']]
     });
 
-    {% comment %} function exportTableToExcel(tableID, filename) {
+    /*
+    function exportTableToExcel(tableID, filename) {
         var downloadLink;
         var dataType = 'application/vnd.ms-excel';
         var tableSelect = document.getElementById(tableID);
@@ -126,6 +128,7 @@
             //triggering the function
             downloadLink.click();
         }
-    } {% endcomment %}
+    } 
+    */
 </script>
 {% endblock script %}
