added transaction functionaity for the client list

--- a/clients/templates/clients/clients_list.html
+++ b/clients/templates/clients/clients_list.html
@@ -34,9 +34,8 @@
                                 <td>{{ client_list_entry.client_name }}</td>
                                 <td>{{ client_list_entry.get_client_type_display }}</td>
                                 <td>
-                                    <a href="{% if client_list_entry.client_type == 'I' %}{% url 'clients:edit_individual' client_list_entry.id %}{% else %}{% url 'clients:edit_corporate' client_list_entry.id %}{% endif %}" class="btn btn-sm btn-oval btn-warning mx-1" title="Edit Client Info">
-                                        <i class="fa fa-edit"></i>
-                                    </a>
+                                    <a href="{% url "transactions:new_transaction" client_list_entry.id %}" class="btn btn-sm btn-oval btn-primary mx-1" title="New Transaction"><i class="fa fa-money"></i></a>
+                                    <a href="{% if client_list_entry.client_type == 'I' %}{% url 'clients:edit_individual' client_list_entry.id %}{% else %}{% url 'clients:edit_corporate' client_list_entry.id %}{% endif %}" class="btn btn-sm btn-oval btn-warning mx-1" title="Edit Client Info"><i class="fa fa-edit"></i></a>
                                     <a href="{% if client_list_entry.client_type == 'I' %}{% url 'clients:beneficiaries_i' client_list_entry.id %}{% else %}{% url 'clients:beneficiaries_c' client_list_entry.id %}{% endif %}" class="btn btn-sm btn-oval btn-dark mx-1" title="Beneficiaries"><i class="fa fa-university"></i></a>
                                 </td>
                             </tr>
